<resources>
    <string name="app_name">هايبروان</string>
    <string name="info">تحذير</string>
    <string name="text">هل أنت متاكد من أنك تريد حذف هذا العنصر</string>
    <string name="delete_all_items">هل أنت متاكد من أنك تريد حذف كل العناصر</string>

    <string name="delete_all_items_cyclecount">تم التصدير بنجاح</string>

    <string name="text_for_serial">هل أنت متاكد من أنك تريد حذف هذا السيريال</string>
    <string name="textforpurchaseorder">هل أنت متاكد من أنك تريد حذف أخر أمرتحويل</string>
    <string name="textforpurchaseorderReciev">هل أنت متاكد من أنك تريد حذف أخر أمرأستلام</string>

    <string name="textforupdateQTY">هذا الباركود تم أضافته من قبل..هل تريد</string>

    <string name="ok">موافق</string>
    <string name="text_not_same_cop_cod">ليس لديك صلاحيه لتحميل هذا الأمر</string>
    <string name="textfordeletelastsearch">لقد قمت بأختيار مخازن مختلفه عن أخر مره.. أضغط موافق لأنشاء أمر تحويل جديد</string>
    <string name="textfornewsearch">لايوجد أمر تحويل .. أضغط موافق لأنشاء أمر جديد</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="textcheckinternet">من فضلك افحص الشبكه</string>
    <string name="numberofitemstoupload">هل أنت متاكد من أنك تريد رفع</string>
    <string name="user_not_found">المستخدم غير موجود</string>
    <string name="searchtxt">بحث</string>
    <string name="enter_description">ادخل الوصف</string>
    <string name="moduleRecieve">Module Reciving</string>
    <string name="Transfer">Module Transfer</string>
    <string name="cucleCount">Module CycleCount</string>
    <string name="GI_TO_CC">GI to cc</string>
    <string name="barcode">Scan Barcode</string>
    <string name="return_item">Return Item</string>
    <string name="availability">Item Availability</string>
    <string name="promotion">Promotion</string>
    <string name="all_site">All Site Availability</string>
    <string name="title_activity_add_items_to_order">AddItemsToOrder</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_barcode">أدخل الباركود</string>
    <string name="search">بحث</string>
    <string name="items_desc">وصف الصنف</string>
    <string name="item_barcode">كود الصنف</string>
    <string name="item_status">حالة الصنف</string>
    <string name="from_site">من مخزن</string>
    <string name="available_in_site">المتاح بالمخزن</string>
    <string name="amount_request">الكميه المطلوبه</string>
    <string name="save">حفظ</string>
    <string name="show_order_detail">عرض بيانات الشراء</string>
    <string name="create_order">انشاء الاوردر</string>
    <string name="add_order">Create Order On SAP</string>
    <string name="receive_date">تاريخ استلام الاورر</string>
    <string name="print">طباعه</string>
</resources>
