<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/main_background_color"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    android:background="@color/main_background_color"
    >
    <!-- android:visibility="gone" -->


    <TextView
        android:id="@+id/txt_module_recieving"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/module_bg_items"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/moduleRecieve"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"  />

    <TextView
        android:id="@+id/txt_module_transafer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/module_bg_items"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/Transfer"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />
    <TextView
        android:id="@+id/txt_module_cyclecount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/module_bg_items"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/cucleCount"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"  />

    <TextView
        android:id="@+id/txt_module_GI"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/module_bg_items"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/GI_TO_CC"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"  />

    <TextView
        android:id="@+id/txt_ScanBarCode"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/module_bg_items"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/barcode"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txt_ReturnItem"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/module_bg_items"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/return_item"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"  />


    <TextView
        android:id="@+id/txt_item_availabilty"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/module_bg_items"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/availability"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txt_promotion"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/module_bg_items"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/promotion"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txt_item_stock"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/module_bg_items"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/all_site"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txt_add_order"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/module_bg_items"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/add_order"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
</ScrollView>